common、framework模块初始化

--- a/KnowGraph-backend/knowgraph-framework/pom.xml
+++ b/KnowGraph-backend/knowgraph-framework/pom.xml
@@ -19,9 +19,17 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Sa-Token 权限认证 -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+            <version>1.38.0</version>
+        </dependency>
+        <!-- Sa-Token 整合 Redis (使用 jackson 序列化) -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-dao-redis-jackson</artifactId>
+            <version>1.38.0</version>
         </dependency>
 
         <dependency>
@@ -33,6 +41,10 @@
             <groupId>com.cleveronion</groupId>
             <artifactId>knowgraph-common</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
     </dependencies>
