--- a/KnowGraph-backend/knowgraph-common/pom.xml
+++ b/KnowGraph-backend/knowgraph-common/pom.xml
@@ -18,7 +18,12 @@
     </properties>
 
     <dependencies>
-
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project> 
