--- a/KnowGraph-backend/knowgraph-common/pom.xml
+++ b/KnowGraph-backend/knowgraph-common/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version> <!-- Spring Boot 3.x 默认使用此版本 -->
+        </dependency>
     </dependencies>
 
 </project> 
