social recommendation模块基础推荐完成

--- a/KnowGraph-backend/knowgraph-main/pom.xml
+++ b/KnowGraph-backend/knowgraph-main/pom.xml
@@ -31,8 +31,8 @@
         </dependency>
         <dependency>
             <groupId>com.cleveronion</groupId>
-            <artifactId>knowgraph-search</artifactId>
-            <version>${project.version}</version>
+            <artifactId>knowgraph-recommendation</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.cleveronion</groupId>
