--- a/KnowGraph-backend/knowgraph-personal/pom.xml
+++ b/KnowGraph-backend/knowgraph-personal/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -8,57 +10,49 @@
     </parent>
 
     <artifactId>knowgraph-personal</artifactId>
-    <packaging>jar</packaging>
-
     <name>knowgraph-personal</name>
     <description>个人空间模块</description>
 
-    <dependencies>
-        <!-- Framework -->
-        <dependency>
-            <groupId>com.cleveronion</groupId>
-            <artifactId>knowgraph-framework</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <!-- Common -->
-        <dependency>
-            <groupId>com.cleveronion</groupId>
-            <artifactId>knowgraph-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-        <!-- Business Dependencies -->
+    <dependencies>
+        <!-- User Module Dependency -->
         <dependency>
             <groupId>com.cleveronion</groupId>
             <artifactId>knowgraph-user</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Content Module Dependency -->
         <dependency>
             <groupId>com.cleveronion</groupId>
             <artifactId>knowgraph-content</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- Social Module Dependency -->
         <dependency>
             <groupId>com.cleveronion</groupId>
             <artifactId>knowgraph-social</artifactId>
             <version>${project.version}</version>
         </dependency>
 
-        <!-- Database -->
+        <!-- Spring Web for RestController -->
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>3.0.3</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+
+        <!-- Lombok for boilerplate code -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
-</project> 
+</project>
