--- a/KnowGraph-backend/knowgraph-main/src/main/resources/application.yml
+++ b/KnowGraph-backend/knowgraph-main/src/main/resources/application.yml
@@ -10,24 +10,11 @@ server:
 spring:
   application:
     name: knowgraph-backend # 应用名称
-  profiles:
-    active: dev # 默认激活开发环境配置
-
----
-# ===================================================================
-# 开发环境配置 (Development Profile)
-# ===================================================================
-spring:
-  config:
-    activate:
-      on-profile: dev # 当 spring.profiles.active=dev 时激活
-
-  # 数据源配置 (MySQL)
   datasource:
-    url: jdbc:mysql://localhost:3306/knowgraph_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    username: root
-    password: Shicong666 # 请替换为您的MySQL密码
     driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/knowgraph_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: Shicong666
 
   # Redis 配置
   data:
@@ -49,3 +36,19 @@ logging:
   level:
     com.cleveronion: debug # 设置项目包的日志级别为 debug
     org.springframework: info
+
+sa-token:
+  # token 名称（同时也是 cookie 名称）
+  token-name: token
+  # token 有效期（单位：秒） 默认30天，-1 代表永久有效
+  timeout: 2592000
+  # token 最低活跃频率（单位：秒），如果 token 超过此时间没有访问系统就会被冻结，默认-1 代表不限制，永不冻结
+  active-timeout: -1
+  # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
+  is-concurrent: true
+  # 在多人登录同一账号时，是否共用一个 token （为 true 时所有登录共用一个 token, 为 false 时每次登录新建一个 token）
+  is-share: false
+  # token 风格（默认可取值：uuid、simple-uuid、random-32、random-64、random-128、tik）
+  token-style: uuid
+  # 是否输出操作日志
+  is-log: true
