feat(admin): 新增分类管理功能并优化用户管理
- 添加分类管理页面及相关API接口
- 实现分类的增删改查功能
- 优化用户管理界面，添加分页和搜索功能
- 完善用户状态和角色变更逻辑
- 更新后台接口以支持分类和用户管理操作
- 调整前端路由和菜单结构

--- a/KnowGraph-backend/knowgraph-main/pom.xml
+++ b/KnowGraph-backend/knowgraph-main/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.cleveronion</groupId>
             <artifactId>knowgraph-recommendation</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.cleveronion</groupId>
@@ -51,4 +51,4 @@
         </dependency>
     </dependencies>
 
-</project> 
+</project>
