--- a/KnowGraph-backend/knowgraph-admin/pom.xml
+++ b/KnowGraph-backend/knowgraph-admin/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cleveronion</groupId>
+            <artifactId>knowgraph-content</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project> 
