--- a/KnowGraph-frontend/package.json
+++ b/KnowGraph-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.66.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@uiw/react-md-editor": "^4.0.7",
     "antd": "^5.26.1",
