--- a/KnowGraph-backend/knowgraph-main/src/main/resources/application.yml
+++ b/KnowGraph-backend/knowgraph-main/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
       password:
       database: 0
       port: 6379
+  servlet:
+    multipart:
+      # 单个文件最大大小
+      max-file-size: 2MB
+      # 总上传文件最大大小
+      max-request-size: 10MB
 
 # MyBatis 配置
 mybatis:
@@ -52,3 +58,11 @@ sa-token:
   token-style: uuid
   # 是否输出操作日志
   is-log: true
+
+# 文件上传配置
+file:
+  upload:
+    # 文件上传路径（使用绝对路径避免Tomcat临时目录问题）
+    path: f:/code/new/KnowGraph/KnowGraph-backend/uploads
+    # 访问域名
+    domain: http://localhost:8080
